# PY-framework

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEBASE_IMPROVEMENTS.md  Dockerfile  Dockerfile.dev  JULES.md  README.md  README_DEV.md  app.py  dev.py  dev_no_reload.py  docker-compose.yml  force_admin.py  main.py  pyproject.toml  pytest.ini  run_tests.py
.github/workflows/: ci.yml
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT_PROGRESS.md  DOCKER.md  MONITORING.md  README.md  SECURITY.md  performance-optimization.md
src/framework/: __init__.py  config.py  csrf.py  csrf_storage.py  layout.py  middleware.py  migrations.py  performance.py  performance_config.py  security.py  session.py
src/framework/audit/: __init__.py  audit_manager.py  audit_service.py  models.py  utils.py
src/framework/auth/: __init__.py  auth.py  auth_with_audit.py  totp.py
src/framework/database/: database.py  optimized_database.py
src/framework/email/: email_service.py
src/framework/monitoring/: __init__.py  alerting.py  dashboard.py  health_checker.py  metrics_collector.py  middleware.py
src/framework/oauth/: __init__.py  oauth_service.py
src/framework/routes/: __init__.py  (+7 more)
static/css/: style.css
static/js/: htmx.min.js
tests/: test_2fa_core.py  test_audit_system.py  test_csrf_protection.py  test_email_service.py  test_integration_complete.py  test_login.py  test_monitoring.py  test_oauth_integration.py  test_performance.py  test_registration.py  test_role_access_control.py  test_security_comprehensive.py  test_security_middleware.py
(+1 files in other folders)
